[package]
name = "panoptikon-relay"
version = "1.0.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = "0.8.4"
clap = { version = "4", features = ["derive"] }
dirs = "6.0.0"
eyre = "0.6.12"
image = { version = "0.25.2", default-features = false, features = ["ico"] }
regex = "1.11.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.140"
shlex = "1.3.0"
toml = "0.8.23"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tray-icon = "0.20.1"
arboard = "3.4.1"
[dependencies.uuid]
version = "1.17.0"
# Lets you generate random UUIDs
features = ["v4"]
[[bin]]
name = "panoptikon-relay"
path = "src/main.rs"
